Implémentation de l’endpoint dockorisation compte pour la version v1.8.0
